[package]
name = "torygg"
version = "0.1.0"
authors = ["nukeythenuke <nukeythenuke@gmail.com>"]
edition = "2021"

[lib]
name = "torygg"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "torygg-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
torygg-vdf = { git = "https://github.com/nukeythenuke/torygg-vdf" }

anyhow = "1"
clap = { version = "3", features = ["derive"] }
dirs = "4"
log = "0.4"
simplelog = "0.12"
tempfile = "3"
walkdir = "2"
