[package]
name = "torygg"
version = "0.1.0"
authors = ["Norman McKeown <normanmckeown@duck.com>"]
edition = "2021"

[lib]
name = "torygg"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "torygg-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = "warn"
unreadable_literal = "allow"

[dependencies]
torygg-vdf = { git = "https://github.com/nukeythenuke/torygg-vdf" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
dirs = "5"
log = "0.4"
xml-rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.12"
tempfile = "3"
termcolor = "1"
toml = "0.8"
thiserror = "1"
typed-path = "0.7"
unicase = "2"
walkdir = "2"